[package]
name = "base-tracex"
description = "A transaction tracing execution extension for reth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth.workspace = true
reth-exex.workspace = true
reth-tracing.workspace = true

# alloy
alloy-primitives.workspace = true

# async
tokio.workspace = true
futures.workspace = true

# misc
lru.workspace = true
eyre.workspace = true
chrono.workspace = true
metrics.workspace = true
derive_more = { workspace = true, features = ["display"] }
