[package]
name = "base-reth-transaction-status"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tips-audit.workspace = true
jsonrpsee.workspace = true
tracing.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
uuid.workspace = true


[lints]
workspace = true
