[package]
name = "base-reth-transaction-status"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
jsonrpsee = { workspace = true, features = ["macros", "server", "http-client", "client"] }
tracing.workspace = true
alloy-primitives.workspace = true
serde.workspace = true
reth-transaction-pool = { workspace = true, features = ["test-utils"] }
eyre.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
uuid.workspace = true
httpmock.workspace = true
serde_json.workspace = true

[lints]
workspace = true
