[package]
name = "base-reth-transaction-tracing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth.workspace = true
reth-exex.workspace = true
reth-optimism-node.workspace = true
reth-optimism-cli.workspace = true
reth-tracing.workspace = true
reth-primitives.workspace = true

# alloy
alloy-primitives.workspace = true

# async
futures.workspace = true
tokio-stream.workspace = true
tokio.workspace = true

# misc
eyre.workspace = true
lru = "0.16.1"
metrics.workspace = true
metrics-derive.workspace = true
