[package]
name = "base-txpool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "OP-Reth Transaction Pool"

[lints]
workspace = true

[dependencies]
# ethereum
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true

# reth
reth-evm.workspace = true
reth-tasks.workspace = true
reth-metrics.workspace = true
reth-chainspec.workspace = true
reth-storage-api.workspace = true
reth-primitives-traits.workspace = true
reth-transaction-pool.workspace = true

# revm
base-revm.workspace = true

# optimism
base-alloy-flz.workspace = true
base-alloy-consensus.workspace = true
base-execution-evm.workspace = true
base-execution-forks.workspace = true
base-execution-primitives.workspace = true

# misc
url.workspace = true
serde.workspace = true
c-kzg.workspace = true
metrics.workspace = true
futures.workspace = true
tracing.workspace = true
tokio-util.workspace = true
derive_more.workspace = true
parking_lot.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "time"] }
jsonrpsee = { workspace = true, features = ["http-client", "macros"] }

[dev-dependencies]
tokio = { workspace = true, features = ["time", "rt-multi-thread", "macros"] }
alloy-eips.workspace = true
base-test-utils.workspace = true
base-execution-chainspec.workspace = true
reth-primitives-traits.workspace = true
reth-provider = { workspace = true, features = ["test-utils"] }
reth-transaction-pool = { workspace = true, features = ["test-utils"] }
