[package]
name = "base-witness-diff"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-client.workspace = true
alloy-transport-http.workspace = true
base-alloy-network.workspace = true
base-proof-mpt = { workspace = true, features = ["std"] }
alloy-rlp.workspace = true
hex.workspace = true
alloy-trie.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
