[package]
name = "base-access-lists"
description = "FBAL library crate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# alloy
alloy-primitives.workspace = true
alloy-rlp = { workspace = true, features = ["derive", "std"] }
alloy-eip7928 = { workspace = true, features = ["serde", "rlp"] }

# revm
revm.workspace = true

# tracing
tracing = { workspace = true, features = ["std"] }

# misc
serde = { workspace = true, features = ["std"] }

[dev-dependencies]
# workspace
base-test-utils.workspace = true

# reth
reth-evm.workspace = true
base-execution-evm.workspace = true
base-execution-chainspec.workspace = true

# revm
base-revm.workspace = true

# alloy
alloy-contract.workspace = true
alloy-consensus = { workspace = true, features = ["std"] }
alloy-sol-types = { workspace = true, features = ["std"] }

# misc
eyre.workspace = true

[[test]]
name = "builder"
path = "tests/builder/main.rs"
