[package]
name = "base-bundles"
description = "Bundle types for transaction bundles"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
test-utils = [ "dep:alloy-signer-local", "dep:base-alloy-rpc-types" ]

[dependencies]
# alloy
alloy-serde = { workspace = true, features = ["std"] }
alloy-consensus = { workspace = true, features = ["std"] }
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-provider = { workspace = true, features = ["reqwest"] }

# base-alloy
base-alloy-flz.workspace = true
base-alloy-consensus = { workspace = true, features = ["std", "k256", "serde"] }

# misc
serde = { workspace = true, features = ["std", "derive"] }
uuid = { workspace = true, features = ["v4", "serde"] }

# test-utils (optional)
alloy-signer-local = { workspace = true, optional = true }
base-alloy-rpc-types = { workspace = true, features = ["std"], optional = true }

[dev-dependencies]
# alloy
alloy-signer-local.workspace = true

# base-alloy
base-alloy-rpc-types = { workspace = true, features = ["std"] }

# misc
serde_json = { workspace = true, features = ["std"] }
