[package]
name = "op-alloy-consensus"
description = "Optimism alloy consensus types"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# Alloy
alloy-rlp.workspace = true
alloy-eips.workspace = true
alloy-consensus.workspace = true
alloy-primitives = { workspace = true, features = ["rlp"] }

# Maili
maili-common.workspace = true

# misc
thiserror.workspace = true
derive_more = { workspace = true, features = ["display"] }

# arbitrary
arbitrary = { workspace = true, features = ["derive"], optional = true }

# serde
serde_with = { workspace = true, optional = true }
alloy-serde = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
rand.workspace = true
bincode.workspace = true
serde_json.workspace = true
alloy-signer.workspace = true
tokio = { workspace = true, features = ["macros"] }
arbitrary = { workspace = true, features = ["derive"] }
alloy-primitives = { workspace = true, features = ["rand", "arbitrary"] }

[features]
default = ["std"]
std = [
    "alloy-eips/std",
    "alloy-consensus/std",
    "maili-common/std",
    "derive_more/std",
]
k256 = ["alloy-primitives/k256", "alloy-consensus/k256"]
kzg = ["alloy-eips/kzg", "alloy-consensus/kzg", "std"]
arbitrary = [
    "std",
    "dep:arbitrary",
    "alloy-consensus/arbitrary",
    "alloy-eips/arbitrary",
    "alloy-primitives/rand",
    "alloy-primitives/arbitrary",
]
serde = [
    "dep:serde",
    "dep:alloy-serde",
    "alloy-primitives/serde",
    "alloy-consensus/serde",
    "alloy-eips/serde",
    "maili-common/serde",
]
serde-bincode-compat = ["serde_with"]
