[package]
name = "base-alloy-consensus"
description = "Base alloy consensus types"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# Alloy
alloy-rlp.workspace = true
alloy-eips.workspace = true
alloy-consensus.workspace = true
alloy-primitives = { workspace = true, features = ["rlp"] }

# compat
alloy-network = { workspace = true, optional = true }
alloy-rpc-types-eth = { workspace = true, optional = true }

# misc
thiserror.workspace = true

# arbitrary
arbitrary = { workspace = true, features = ["derive"], optional = true }

# serde
serde_with = { workspace = true, optional = true }
alloy-serde = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
rand.workspace = true
bincode = { workspace = true, features = ["serde"] }
serde_json.workspace = true
alloy-signer.workspace = true
arbitrary = { workspace = true, features = ["derive"] }
alloy-primitives = { workspace = true, features = ["rand", "arbitrary"] }

[features]
default = [ "std" ]
std = [ "alloy-consensus/std", "alloy-eips/std" ]
alloy-compat = [ "dep:alloy-network", "dep:alloy-rpc-types-eth", "serde" ]
k256 = [ "alloy-consensus/k256", "alloy-primitives/k256" ]
kzg = [ "alloy-consensus/kzg", "alloy-eips/kzg", "std" ]
arbitrary = [
	"alloy-consensus/arbitrary",
	"alloy-eips/arbitrary",
	"alloy-primitives/arbitrary",
	"alloy-primitives/rand",
	"dep:arbitrary",
	"std",
]
serde = [
	"alloy-consensus/serde",
	"alloy-eips/serde",
	"alloy-primitives/serde",
	"dep:alloy-serde",
	"dep:serde",
]
serde-bincode-compat = [ "alloy-consensus/serde-bincode-compat", "serde_with" ]
