[package]
name = "base-alloy-evm"
description = "EVM implementation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# alloy
alloy-eips.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-evm.workspace = true

# base
base-alloy-consensus = { workspace = true, features = ["evm"] }
base-alloy-hardforks.workspace = true
base-revm = { workspace = true, features = ["alloy"] }

# revm
revm.workspace = true

# misc
auto_impl.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true
alloy-hardforks.workspace = true

[features]
default = [ "std" ]
std = [
	"alloy-consensus/std",
	"alloy-eips/std",
	"alloy-evm/std",
	"alloy-primitives/std",
	"base-alloy-consensus/std",
	"base-revm/std",
	"revm/std",
	"thiserror/std",
]
reth = [ "base-alloy-consensus/reth", "base-revm/reth", "std" ]
