[package]
name = "op-alloy-flz"
description = "Tiny FastLZ compression library"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
fastlz = { version = "0.1.0", optional = true }

[dev-dependencies]
alloy-primitives.workspace = true
rstest.workspace = true

[features]
default = []
compress = ["dep:fastlz"]
decompress = ["dep:fastlz"]
