[package]
name = "base-alloy-flz"
description = "FastLZ compression length estimation and Fjord transaction size utilities"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]

[features]
default = [ "std" ]
std = []
